# ufc-prediction-tracker

./: .gitignore
ufc_prediction_tracker/: .cargo-dist.toml  Cargo.toml  Dioxus.toml  database.db
ufc_prediction_tracker/.github/workflows/: release.yml
ufc_prediction_tracker/assets/: output.css
ufc_prediction_tracker/src/: main.rs
ufc_prediction_tracker/src/api/: api.rs
ufc_prediction_tracker/src/components/: echo.rs
ufc_prediction_tracker/src/db/: db.rs
ufc_prediction_tracker/src/server_funcs/: mod.rs  server_funcs.rs
ufc_prediction_tracker/src/views/: home.rs  make_predictions.rs  mod.rs  navbar.rs  past_predictions.rs
