[package]
name = "ufc_prediction_tracker"
version = "0.1.0"
authors = ["Geoffrey White <geoffpiercewhite@gmail.com>"]
edition = "2021"
description = "A UFC prediction tracker with Dioxus UI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/geoffpiercewhite/ufc-prediction-tracker"
readme = "README.md"
keywords = ["ufc", "prediction", "tracker"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
log = "0.4.27"
scraper = "0.23.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
web-sys = "0.3.77"
dioxus-logger = "0.6.2"
tracing = "0.1.41"
chrono = "0.4.41"
urlencoding = "2.1.3"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop","web-sys/console"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
